# calmiq

./: .gitignore  README.md  calmiq-32ac4-firebase-adminsdk-fbsvc-8461ce326a.json  prev_funcion (1).ino  pyproject.toml
Diagrama de Conexión - KiCAD-20251201T062838Z-1-001/Diagrama de Conexión - KiCAD/: CALMIQ.kicad_prl  CALMIQ.kicad_pro  CALMIQ.kicad_sch  Calmiq_Components.bak  Calmiq_Components.kicad_sym  sym-lib-table
Prototipo Calmiq - Arduino IDE-20251201T062721Z-1-001/Prototipo Calmiq - Arduino IDE/: calmic_prototype.ino
itesm-iot-backend-main/itesm-iot-backend-main/: main.py
itesm-iot-frontend-main/: package-lock.json  package.json
itesm-iot-frontend-main/src/app/: page.tsx
itesm-iot-frontend-main/src/app/api/gemini/: route.ts
itesm-iot-frontend-main/src/components/: ContentIsland.tsx  Sidebar.tsx  Topbar.tsx
itesm-iot-frontend-main/src/functions/: cortisol.ts  ecg.ts  firebase.ts  gemini.ts
src/: App.css  App.jsx
src/components/: CreateAcc.jsx  Datos.css  Datos.jsx  Hero.css  Hero.jsx  LoginPage.css  LoginPage.jsx  MissionVision.css  MissionVision.jsx  Modelo.css  Modelo.jsx  Navbar.css  Navbar.jsx  Product.css  Product.jsx
