[project]
name = "iot-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "firebase-admin>=7.1.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.4",
    "scipy>=1.16.3",
    "scipy-stubs==1.16.3.0",
    "uvicorn>=0.38.0",
]
